# Atcore

./: CMakeLists.txt
AtCoreServer/: CMakeLists.txt  atcorehostauthorization.cpp  atcorehostauthorization.h  serverconfig.cpp  serverconfig.h  serverpart.cpp  serverpart.h
doc/: Doxyfile.in  serverSetup.md
keys/: client.crt  client.key  server.crt  server.key
src/core/: CMakeLists.txt  atcore.cpp  atcore.h  atcorenetworkclient.cpp  atcorenetworkclient.h  atcorenetworkclientconfig.cpp  atcorenetworkclientconfig.h  clientstuff.cpp  clientstuff.h  serverpart.cpp  serverpart.h
src/widgets/: CMakeLists.txt  atcoreclientloginwidget.cpp  atcoreclientloginwidget.h
testclient/: mainwindow.cpp  mainwindow.h
